# synciki

./: .gitignore  Application.hs  DropBox.hs  Foundation.hs  LICENSE  Main.hs  Makefile  README.md  TODO  devel.hs  style.css  synciki.cabal
Handler/: Home.hs
config/: routes  settings.yml  sqlite.yml
deploy/: Procfile
templates/: dblogin.hamlet  homepage.hamlet
