name:                synciki
version:             0.1.0.0
synopsis:            Wiki-style blog derived from online-accessible external documents.
homepage:            FIXME: unknown
license:             BSD3
license-file:        LICENSE
author:              Robin Lee Powell
maintainer:          rlpowell@digitalkingdom.org
category:            Web
build-type:          Simple
cabal-version:       >=1.2
Data-files:
        style.css

Executable ControlV
  Main-Is:           Main.hs
  Build-Depends:     base < 5
                     , happstack-foundation == 0.1.*
                     , happstack-authenticate
                     , ixset
                     , time
                     , text
                     , hsp
                     , hsx
                     , blaze-html
                     , happstack-hsp
                     , filepath
                     , acid-state
                     , http-conduit
                     , hxt
                     , bytestring
                     , rex
